--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: Leah Coffin's Resume"
+author: Leah Coffin
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -54,11 +54,10 @@ Contact {#contact}
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> Leah.Coffin@asu.edu
+- <i class="fa fa-github"></i> github.com/Leah-Coffin
+- <i class="fa fa-linkedin"></i> www.linkedin.com/in/leah-coffin-072761202
+- <i class="fa fa-phone"></i> (623) 227-9917
 
 
 
@@ -85,7 +84,7 @@ build_skill_bars(skills)
 Open Source Contributions {#open-source}
 --------------------------------------------------------------------------------
 
-All projects available at `github.com/nstrayer/<name>`
+All projects available at `github.com/Leah-Coffin`
 
 
 - `shinysense`: R package to use sensor data in Shiny apps
@@ -96,15 +95,13 @@ All projects available at `github.com/nstrayer/<name>`
 More info {#more-info}
 --------------------------------------------------------------------------------
 
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
-
 
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/lab-06-cv).
 
 Last updated on `r Sys.Date()`.
 
@@ -114,14 +111,11 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Leah Coffin {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
-
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
-"
+intro_text <- "Project coordinator with experience in international non-profit programming, k-12 and higher education. Specializing in people management, continuous program improvement, program evaluation and data analytics."
 
 
 cat(sanitize_links(intro_text))
